# BananaSlice

./: .gitignore  CHANGELOG.md  LICENSE  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/workflows/: release.yml
scripts/: sync-version.js
src/: App.tsx
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: api.rs  keystore.rs  lib.rs  main.rs
src-tauri/src/commands/: composite.rs  file.rs  generate.rs  mod.rs
src/api/: generate.ts  index.ts
src/components/: Canvas.tsx  ConfirmDialog.tsx  ContextToolbar.tsx  ErrorBoundary.css  KeyboardShortcuts.tsx  LayerPanel.css  LayerPanel.tsx  Modal.css  ReferenceImages.css  ReferenceImages.tsx  SettingsModal.css  SettingsModal.tsx  Toast.css  Tooltip.css  Tooltip.tsx
src/hooks/: useGeneration.ts
src/store/: canvasStore.ts  historyStore.ts  index.ts  layerStore.ts  selectionStore.ts  settingsStore.ts  toolStore.ts
src/styles/: index.css
src/test/: setup.ts
src/types/: index.ts
src/utils/: aspectRatio.ts  exportManager.ts  layerCompositor.ts  projectManager.ts  selectionProcessor.ts
src/utils/__tests__/: exportManager.test.ts
