[package]
name = "BananaSlice"
version = "0.1.3"
description = "A Generative Fill Desktop App"
authors = ["Irfanul Majumder"]
license = "MIT"
repository = "https://github.com/IrfanulM/BananaSlice"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "bananaslice_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.3", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.9.4", features = [] }
tauri-plugin-log = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
keyring = { version = "3", features = ["windows-native", "apple-native", "linux-native"] }

# Image processing
image = "0.25"
base64 = "0.22"

# HTTP client for API requests
reqwest = { version = "0.12", features = ["json", "multipart"] }
tokio = { version = "1", features = ["full"] }

# Error handling
thiserror = "2"
anyhow = "1"
